[package]
name = "ventmere-proto-rust"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
walkdir = "2"
